# utakata-discord-bot

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml
.devcontainer/: .env  .env.example  Dockerfile  compose.yaml  devcontainer.json
.github/workflows/: review-rust-code.yml
src/: check.rs  commands.rs  main.rs
src/cron/: dairy_charge.rs
src/entities/: record.rs
workspace/: Cargo.toml
workspace/src/: commands.rs  utils.rs
workspace/src/cron/: mod.rs
workspace/src/entities/: mod.rs  prelude.rs
workspace/src/migration/: m20250121_090757_create_table_point.rs  migrator.rs  mod.rs
